// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`streamableDetails.vue > renders a song 1`] = `
<article data-v-f72f7b11="" class="flex-1 flex flex-col items-center justify-around w-screen"><img data-v-f72f7b11="" src="https://cover.site/fotd.jpg" class="my-0 mx-auto w-[calc(70vw_+_4px)] aspect-square rounded-full border-2 border-solid border-k-text-primary object-center object-cover" alt="Cover art">
  <div data-v-f72f7b11="" class="w-full flex flex-col justify-around px-6">
    <div data-v-f72f7b11="">
      <p data-v-f72f7b11="" class="text-[6vmin] font-bold mx-auto mb-4">Afraid to Shoot Strangers</p>
      <!--v-if-->
      <p data-v-f72f7b11="" class="text-[5vmin] mb-2 opacity-50">Iron Maiden</p>
      <p data-v-f72f7b11="" class="text-[4vmin] opacity-50">Fear of the Dark</p>
    </div>
  </div>
</article>
`;

exports[`streamableDetails.vue > renders an episode 1`] = `
<article data-v-f72f7b11="" class="flex-1 flex flex-col items-center justify-around w-screen"><img data-v-f72f7b11="" src="https://cover.site/pod.jpg" class="my-0 mx-auto w-[calc(70vw_+_4px)] aspect-square rounded-full border-2 border-solid border-k-text-primary object-center object-cover" alt="Cover art">
  <div data-v-f72f7b11="" class="w-full flex flex-col justify-around px-6">
    <div data-v-f72f7b11="">
      <p data-v-f72f7b11="" class="text-[6vmin] font-bold mx-auto mb-4">Brahms Piano Concerto No. 1</p>
      <!--v-if-->
      <p data-v-f72f7b11="" class="text-[5vmin] mb-2 opacity-50">Some random dudes</p>
      <p data-v-f72f7b11="" class="text-[4vmin] opacity-50">The Sticky Notes podcast</p>
    </div>
  </div>
</article>
`;
